--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "sqlite-job",
+    "pytest>=8.0.0",
+    "pytest-cov>=5.0.0",
+    "pytest-mock>=3.12.0",
 ]
 
 [tool.uv.sources]
